--- a/day-7-complete/NikeJordee/package.json
+++ b/day-7-complete/NikeJordee/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
+    "react-router-dom": "^7.1.3",
     "sanity": "^3.68.3",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
