complete-stripe-payment

--- a/day-7-complete/NikeJordee/package.json
+++ b/day-7-complete/NikeJordee/package.json
@@ -19,12 +19,16 @@
     "@sanity/client": "^6.24.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.3",
+    "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.465.0",
+    "micro": "^10.0.1",
     "next": "15.0.3",
     "next-sanity": "^9.8.32",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -33,12 +37,16 @@
     "react-icons": "^5.4.0",
     "react-is": "^19.0.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "sanity": "^3.68.3",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^20",
     "@types/react": "^18",
