--- a/day-7-complete/NikeJordee/package.json
+++ b/day-7-complete/NikeJordee/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "sanity": "^3.68.3",
+    "shippo": "^2.15.0",
     "stripe": "^17.6.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
